new project page

--- a/static/html/sections/creatorshome.html
+++ b/static/html/sections/creatorshome.html
@@ -19,10 +19,12 @@
 </head>
 <body onresize="ImageGrid(options)" onLoad="ImageGrid(options)">
     <!-- <div id="hamburger"><i data-feather="menu"></i></div> -->
-    
+    <div class="creators-nav">
+			<div><h1>Creators of Cornell</h1></div>
+		</div>
     <div class="creators">
 		{% block content %}
-		<div class="creators-nav"><h1>Creators of Cornell</h1></div>
+		
 		<div class="creators-content">
 			<div class="flex">
 			<div class="placeholder"></div>
