added js for about pg

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -173,6 +173,8 @@
                 <h4><strong>- m -</strong></h4>
             </center>
         </div>
+{% endblock %}
 
-
+{% block scripts %}
+<script src="{% static 'js/sections/about.js' %}"></script>
 {% endblock %}
