imgs added in about html file

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -37,8 +37,8 @@
 
             <div class = "double-img-overlap">
                 <ul>
-                    <li><img src = "pam.jpg" /></li>
-                    <li><img src = "pam.jpg" /></li>
+                    <li><img src = "imgs/pam.jpg" /></li>
+                    <li><img src = "imgs/pam.jpg" /></li>
                 </ul>
             </div>
         </div>
@@ -152,12 +152,12 @@
         <div class = "our-sponsors">
             <h2>our sponsors</h2>
             <div class = "sponsors-img">
-                <img src = "adobe.png" />
+                <img src = "imgs/adobe.png" />
             </div>
         </div>
 
         <div class = "join-us">
-            <img src = "joinus.jpg" />
+            <img src = "imgs/joinus.jpg" />
             <div class = "join-us-info">
                 <h2>join us</h2>
                 <h4><strong>mailing list</strong></h4>
