fixed background imgs

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -43,8 +43,7 @@
             </div>
         </div>
 
-        <div class = "our-mission">
-
+        <div class = "our-mission" style="background-image: url('{% static 'imgs/story.jpg' %}');">
             <div class = "our-mission-info">
                 <center>
                     <h2 class = "mission-border"> our mission</h2>
@@ -56,7 +55,7 @@
         </div>
 
 
-        <div class= "guiding-principles">
+        <div class= "guiding-principles" style="background-image: url('{% static 'imgs/mediumbckgrnd.jpg' %}');">
             <h2> guiding <br /> principles</h2>
             <div class = "guiding-principles-info">
                 <div class = "guiding-principles-detail">
