fized adobe img logo

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -151,7 +151,7 @@
         <div class = "our-sponsors">
             <h2>our sponsors</h2>
             <div class = "sponsors-img">
-                <img src = "{% static 'imgs/adobe.jpg' %}" />
+                <img src = "{% static 'imgs/adobe.png' %}" />
             </div>
         </div>
 
