--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -8,7 +8,7 @@
 
 {% block content %}
         <div class = "medium-type">
-            <h1> medium is a &nbsp
+            <h1> medium is a
                 <span class = "txt-type" data-wait= "3000" data-speed = "100" data-words='["community of students who want to engage with design ",
                 "playground to foster innovation and experimentation",
                 "link between creative individuals, campus organizations, and the design industry",
@@ -20,9 +20,9 @@
             <div class = "our-story-info">
                 <h2> our <br /> story</h2>
                 <br/>
-                <h4><strong>medium (n.)
+                <h4><b>medium (n.)
                     <br />
-                    an agency or a means to do something</strong>
+                    an agency or a means to do something</b>
                 </h4>
                 <h3>
                     <br/>
@@ -59,14 +59,14 @@
             <h2> guiding <br /> principles</h2>
             <div class = "guiding-principles-info">
                 <div class = "guiding-principles-detail">
-                    <h4><strong>take initiative.</strong>
+                    <h4><b>take initiative.</b>
                         <br />
                         There’s no hand holding here. We celebrate self-starters,
                         those who are brave enough to forge their own paths.
                     </h4>
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><strong>open your mind.</strong>
+                    <h4><b>open your mind.</b>
                         <br />
                         True innovation starts when one sees the world differently
                         from the layman. Opportunities are everywhere, if you observe
@@ -74,7 +74,7 @@
                     </h4>
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><strong>better together.</strong>
+                    <h4><b>better together.</b>
                         <br />
                         Through collaboration and peer crits, we benefit from one
                         another’s diverse expertise by seeing in ways we wouldn’t
@@ -82,21 +82,21 @@
                     </h4>
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><strong>stay humble.</strong>
+                    <h4><b>stay humble.</b>
                         <br />
                         A designer’s teacher is the user. Assume nothing,
                         and always consider different perspectives.
                     </h4>
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><strong>design & deliver.</strong>
+                    <h4><b>design & deliver.</b>
                         <br />
                         It’s more than just ideas, it’s about making it a reality.
                         We hold one another accountable to our commitments and responsibilities.
                     </h4>
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><strong>assume good.</strong>
+                    <h4><b>assume good.</b>
                         <br />
                         Everyone’s trying their best. Be understanding of one
                         another’s situations and treat each other with kindness.
@@ -158,18 +158,18 @@
         <div class = "join-us">
             <img src = "{% static 'imgs/joinus.jpg' %}" />
             <div class = "join-us-info">
-                <h2>join us</h2>
-                <h4><strong>mailing list</strong></h4>
+                <!-- <h2>join us</h2>
+                <h4><b>mailing list</b></h4>
                 <br />
-                <br />
+                <br /> -->
                 <h2>contact us</h2>
-                <h4><strong>mediumdesigncollective@gmail.com</strong></h4>
+                <h4><b>mediumdesigncollective@gmail.com</b></h4>
             </div>
         </div>
 
         <div class = "end-m">
             <center>
-                <h4><strong>- m -</strong></h4>
+                <h4><b>- m -</b></h4>
             </center>
         </div>
 {% endblock %}
