updated fonts and added about to nav bar

--- a/static/html/sections/index.html
+++ b/static/html/sections/index.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="narrative">
-    <div class="narrative__wrap">
+    <!-- <div class="narrative__wrap">
         <div class="narrative__text-wrap left">
             <div class="narrative__text">
                 <div class="narrative__title">mission</div>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/raw.jpg' %}');"></div>
-    </div>
+    </div> -->
     <div class="narrative__wrap">
         <div class="narrative__text-wrap right">
             <div class="narrative__text">
@@ -54,7 +54,7 @@
         <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/team.jpg' %}');"></div>
     </div>
 
-    <div class="fullscreen-background">
+    <!-- <div class="fullscreen-background">
         <a href="https://www.facebook.com/events/236180950400003/">
           <video autoplay loop muted class="fullscreen-background__promo">
             <source src="{% static 'videos/promo_medium.mp4' %}">
@@ -62,7 +62,7 @@
          </a>
 
 
-    </div>
+    </div> -->
     <!-- <div class="newsletter">
         <div class="newsletter__text">newsletter</div>
         <div class="newsletter__field"></div>
