--- a/static/html/sections/teams.html
+++ b/static/html/sections/teams.html
@@ -59,7 +59,7 @@
                 concerning Cornell’s design community. Members
                 of the publication team work closely with
                 the web team in order to generate content for Medium’s
-                digital publication (new for 2017-18!).
+                digital publication.
             </div>
         </div>
     </div>
