--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -24,14 +24,14 @@
                     <br />
                     an agency or a means to do something</b>
                 </h4>
-                <h3>
+
                     <br/>
                     Medium was founded in 2015 by 3 AAP students who decided to transform a design publication into a live event.
                     Together, they created RAW Expo, a design exhibition in which students from all across campus showcased their work.
                     The event was a huge hit - 500+ attendees proved that there was an incredible amount of interest in and need for an
                     interdisciplinary design group. From RAW, Medium Design Collective spawned, to become a community of designers who
                     collaborate on innovative projects and serve as a platform and resource for design dialogue.
-                </h3>
+                    <br/>
                 <br/>
             </div>
 
@@ -48,8 +48,8 @@
                 <center>
                     <h2 class = "mission-border"> our mission</h2>
                     <br />
-                    <h4>To build an interdisciplinary collective of individuals, as a platform for engaging in
-                        dialogue and collaboration about design.</h4>
+                    To build an interdisciplinary collective of individuals, as a platform for engaging in
+                        dialogue and collaboration about design.
                 </center>
             </div>
         </div>
@@ -59,48 +59,48 @@
             <h2> guiding <br /> principles</h2>
             <div class = "guiding-principles-info">
                 <div class = "guiding-principles-detail">
-                    <h4><b>take initiative.</b>
+                    <b>take initiative.</b>
                         <br />
                         There’s no hand holding here. We celebrate self-starters,
                         those who are brave enough to forge their own paths.
-                    </h4>
+
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><b>open your mind.</b>
+                    <b>open your mind.</b>
                         <br />
                         True innovation starts when one sees the world differently
                         from the layman. Opportunities are everywhere, if you observe
                         carefully.
-                    </h4>
+
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><b>better together.</b>
+                    <b>better together.</b>
                         <br />
                         Through collaboration and peer crits, we benefit from one
                         another’s diverse expertise by seeing in ways we wouldn’t
                         have before.
-                    </h4>
+
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><b>stay humble.</b>
+                    <b>stay humble.</b>
                         <br />
                         A designer’s teacher is the user. Assume nothing,
                         and always consider different perspectives.
-                    </h4>
+
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><b>design & deliver.</b>
+                    <b>design & deliver.</b>
                         <br />
                         It’s more than just ideas, it’s about making it a reality.
                         We hold one another accountable to our commitments and responsibilities.
-                    </h4>
+
                 </div>
                 <div class = "guiding-principles-detail">
-                    <h4><b>assume good.</b>
+                    <b>assume good.</b>
                         <br />
                         Everyone’s trying their best. Be understanding of one
                         another’s situations and treat each other with kindness.
-                    </h4>
+
                 </div>
             </div>
         </div>
@@ -163,7 +163,7 @@
                 <br />
                 <br /> -->
                 <h2>contact us</h2>
-                <h4><b>mediumdesigncollective@gmail.com</b></h4>
+                <b>mediumdesigncollective@gmail.com</b>
             </div>
         </div>
 
